# simple-chat

./: Cargo.toml
.github/workflows/: ci.yml
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  svc.rs
