[workspace]
resolver = "3"
members = ["client","server"]

[workspace.dependencies]
tokio            = { version = "1", features = ["full"] }
serde            = { version = "1.0.225", features = ["derive"] }
serde_json       = "1.0.145"
dashmap          = "6.1.0"
local-ip-address = "0.6"

# Optimization

[profile.release]
codegen-units = 1           # Single codegen unit for better optimization
lto = "thin"                # Thin LTO for faster compile times
opt-level = 3               # Maximum optimization
overflow-checks = false     # Disable overflow checks for speed
panic = "abort"             # Smaller and faster panic handler
strip = "symbols"           # Strip symbols to reduce binary size
debug = false               # No debug info in release
incremental = false         # Disable incremental for better optimization

[profile.release.package."*"]
opt-level = 3               # Optimize all dependencies too

[profile.dev]
opt-level = 0               # No optimization for faster compilation
debug = true                # Include debug info